# bot_mongodb

./: .gitignore  README.md  env.example  pyproject.toml
core/: aggregation.py  main.py  settings.py
telegram_bot/: bot_service.py
utils/: date_validate.py
